MageEdu-Private-Cloud/infra-services-with-prometheus/06-MinIO/04-ingress-minio.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio
spec:
  ingressClassName: nginx
  rules:
  - host: minio.magedu.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: minio
            port:
              number: 9001
